2006-05-10  Christian Persch  <chpe@cvs.gnome.org>

	* configure.ac:
	* embed/mozilla/Makefile.am:
	* embed/mozilla/mozilla-embed-single.cpp:

	Drop non-toolkit gecko support too.

2006-05-10  Christian Persch  <chpe@cvs.gnome.org>

	* embed/mozilla/EphySidebar.cpp:

	Another API change! Thank you, mozilla!

2006-05-10  Christian Persch  <chpe@cvs.gnome.org>

	* configure.ac:
	* data/glade/prefs-dialog.glade:
	* embed/ephy-favicon-cache.c: (ephy_favicon_cache_get):
	* embed/mozilla/AutoJSContextStack.cpp:
	* embed/mozilla/ContentHandler.cpp:
	* embed/mozilla/ContentHandler.h:
	* embed/mozilla/EphyAboutModule.cpp:
	* embed/mozilla/EphyAboutModule.h:
	* embed/mozilla/EphyBrowser.cpp:
	* embed/mozilla/EphyBrowser.h:
	* embed/mozilla/EphyContentPolicy.cpp:
	* embed/mozilla/EphyContentPolicy.h:
	* embed/mozilla/EphyDirectoryProvider.cpp:
	* embed/mozilla/EphyFind.cpp:
	* embed/mozilla/EphyFind.h:
	* embed/mozilla/EphyHeaderSniffer.cpp:
	* embed/mozilla/EphyHeaderSniffer.h:
	* embed/mozilla/EphyHistoryListener.cpp:
	* embed/mozilla/EphyHistoryListener.h:
	* embed/mozilla/EphyPromptService.cpp:
	* embed/mozilla/EphySidebar.cpp:
	* embed/mozilla/EphySidebar.h:
	* embed/mozilla/EphySingle.cpp:
	* embed/mozilla/EphySingle.h:
	* embed/mozilla/EphyUtils.cpp:
	* embed/mozilla/EphyUtils.h:
	* embed/mozilla/EventContext.cpp:
	* embed/mozilla/EventContext.h:
	* embed/mozilla/FilePicker.cpp:
	* embed/mozilla/FilePicker.h:
	* embed/mozilla/GlobalHistory.cpp:
	* embed/mozilla/GlobalHistory.h:
	* embed/mozilla/GtkNSSClientAuthDialogs.cpp:
	* embed/mozilla/GtkNSSDialogs.cpp:
	* embed/mozilla/GtkNSSKeyPairDialogs.cpp:
	* embed/mozilla/GtkNSSSecurityWarningDialogs.cpp:
	* embed/mozilla/GtkNSSSecurityWarningDialogs.h:
	* embed/mozilla/Makefile.am:
	* embed/mozilla/MozDownload.cpp:
	* embed/mozilla/MozDownload.h:
	* embed/mozilla/MozRegisterComponents.cpp:
	* embed/mozilla/MozRegisterComponents.h:
	* embed/mozilla/MozillaPrivate.cpp:
	* embed/mozilla/MozillaPrivate.h: