@@ -1,3 +1,11 @@
+2006-05-11  Christian Persch  <chpe@cvs.gnome.org>
+
+	* src/bookmarks/ephy-bookmarks.c: (add_to_favorites), (resolve_cb),
+	(browse_cb):
+
+	Don't crash when adding zeroconf bookmarks while bookmarks are locked
+	down. Bug #341379.
+
 2006-05-10  Christian Persch  <chpe@cvs.gnome.org>
 
 	* configure.ac:
